--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check:vue": "node scripts/verify-vue.mjs",
+    "check:fortune": "node scripts/verify-fortune.mjs",
+    "check": "npm run check:vue && npm run check:fortune"
   },
   "dependencies": {
     "html2canvas": "^1.4.1",
